# naval-agentic-ai

./: .gitignore  README.md
a_susceptibility-agent-v1/: README.md
a_susceptibility-agent-v1/config/: README.md  agents.yaml  tasks.yaml
a_susceptibility-agent-v1/src/: README.md  __init__.py  crew.py  main.py
a_susceptibility-agent-v1/src/models/: __init__.py
a_susceptibility-agent-v1/src/tools/: __init__.py  exif_tools.py  multimodal_tools.py
b_vulnerability-agent-v1/: README.md  gradio_vulnerability_v1_app.py
b_vulnerability-agent-v1/config/: agents.yaml  jamming_database.json  tasks.yaml
b_vulnerability-agent-v1/data/sample_attacks/: scenario_03_multiple_sources.json  scenario_04_follower_jamming.json
b_vulnerability-agent-v1/src/models/: attack_data.py
b_vulnerability-agent-v1/src/tools/: countermeasure_simulator.py  jamming_classifier.py  network_anomaly_detector.py
c_recovery-agent-v1/: README.md
d_image_procesor-agent/: .env.example  README.md  gradio_images_app.py  pyproject.toml
d_image_procesor-agent/config/: agents.yaml  tasks.yaml
d_image_procesor-agent/data/sample_threats/: scenario_01_drone_swarm.json
d_image_procesor-agent/src/: crew.py  main.py
d_image_procesor-agent/src/models/: threat_data.py
d_image_procesor-agent/src/tools/: actuators.py  drone_analyzer.py  nyckel_classifier.py  radar_fusion.py  vision_detector.py
d_image_procesor-agent/src/utils/: logger.py
susceptibility-agent-v1/: README.md  gradio_susceptibility_v1_app.py  pyproject.toml
susceptibility-agent-v1/config/: agents.yaml  tasks.yaml  threat_database.json
susceptibility-agent-v1/src/: README.md  crew.py  main.py
susceptibility-agent-v1/src/tools/: comms_reconfig_tool.py  em_signature_tool.py  emitter_threat_tool.py  location_tools.py
susceptibility-agent-v1/src/utils/: logger.py
vulnerability-agent-v1/: README.md  gradio_vulnerability_v1_app.py  pyproject.toml
vulnerability-agent-v1/config/: README.md  agents.yaml  tasks.yaml
vulnerability-agent-v1/data/sample_attacks/: scenario_01_single_barrage.json  scenario_02_spot_critical.json
vulnerability-agent-v1/src/: crew.py  main.py
vulnerability-agent-v1/src/tools/: actuator_tools.py  countermeasure_simulator.py  jamming_classifier.py  multimodal_tools.py
vulnerability-agent-v1/src/utils/: logger.py
